--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,11 @@
           </fieldset>
         </form>
       </section>
+      <section>
+        <div class="user-stories">
+          The links of R-rated websites will not be processed.Don't try to waste your time.
+        </div>
+      </section>
     </main>
     <footer>
       <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
